gvb_interp/src/snapshots/gvb_interp__vm__tests__assign.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
print "1"
print newline
print "13"
print newline
print "20"
print newline
print "abC"
print newline
print "140"
print newline
flush

