gvb_interp/src/snapshots/gvb_interp__vm__tests__clear.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
open file "foo.DAT", read: true, write: false, truncate: false
print "100"
print "2"
print "a 1"
print "a 2"
print newline
flush
close file
open file "foo.DAT", read: false, write: true, truncate: true
print "0"
print "0"
print "a 1"
print newline
flush
close file

