gvb_interp/src/snapshots/gvb_interp__vm__tests__for_replaces_sub.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
print "1"
flush
print "2"
flush

