gvb_interp/src/snapshots/gvb_interp__vm__tests__locate.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
set row to 2
set column to 9
set row to 4
set column to 0

