gvb_interp/src/snapshots/gvb_interp__vm__tests__on.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
print "B"
flush
print "C"
flush
print "A"
flush
print "C"
flush

