gvb_interp/src/snapshots/gvb_interp__vm__tests__print.snap
---
source: gvb_interp/src/vm.rs
expression: "run(r#\"\n10 print:print;:print \"foo\":locate ,10:print spc(2)tab(13);\n20 a$=\"ABCDEFG\":a=3:print a$tab(3)a\n    \"#.trim(),\n    vec![(ExecResult :: End, ExecInput :: None)])"

---
print newline
flush
flush
print "foo"
print newline
flush
set column to 9
print "  "
get column: 9
print "   "
flush
print "ABCDEFG"
print " "
get column: 9
print "             "
print "3"
print newline
flush

