gvb_interp/src/snapshots/gvb_interp__vm__tests__r#fn.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
print "3"
print "3.14159265"
print "3"
print "30"

